<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="120dp"
    android:padding="6dip">

    <ImageView
        android:id="@+id/articleImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="6dip"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/article_poster"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/articleTitle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@id/articleDescription"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/articleImage"
        android:ellipsize="marquee"
        android:maxLines="1"
        android:padding="2dip"
        android:text="@string/example_title"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/articleDescription"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/articleImage"
        android:maxLines="5"
        android:text="@string/example_description"
        android:textSize="12sp" />


</RelativeLayout>